# vales-heart

./: Cargo.toml  readme.md
src/: main.rs
src/components/: animation.rs  armor.rs  assets.rs  class.rs  combat.rs  consumable.rs  inventory.rs  item.rs  mod.rs  npc.rs  physics.rs  player.rs  quest.rs  ui.rs  weapon.rs
src/plugins/: assets.rs  class.rs  combat.rs  inventory.rs  menu.rs  mod.rs  physics.rs  player.rs  weapon.rs
src/resources/: game_state.rs  mod.rs
src/systems/: animation.rs  class.rs  combat.rs  input.rs  inventory.rs  mod.rs  movement.rs  tiles.rs  ui.rs  weapon.rs  world.rs
src/utils/: constants.rs  drops.rs  helpers.rs  mod.rs
